# Nova-customer-support-rag-system

./: .dockerignore  .gitignore  Business_Advantages.md  Dockerfile  README.md  app.py  docker-compose.yml  evaluate.py  pipeline.py  prometheus.yml  pyproject.toml  ui.py
data/: prepare_data.py
generation/: generator.py
indexing/: embedder.py  vector_store.py
llmops/: logger.py  metrics.py
retrieval/: reranker.py  semantic_search.py
